--- a/style.css
+++ b/style.css
@@ -298,7 +298,10 @@
     padding: 3rem !important;
 }
 @media (min-width:1024px) and (max-width:1200px) {
-    
+    .btn-width
+    {
+        width: 39%;
+    }
 }
 @media (min-width:768px) and (max-width:1024px)
 {
